Add version tag for non-tag trigger

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,6 +10,9 @@ on:
     branches:
       - 'master'
 
+env:
+  NODE_VERSION: lts-buster
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -17,6 +20,19 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+      - 
+        name: Setup build environment variables
+        id: build-env
+        run: |
+          if [ "$GITHUB_REF_TYPE" == "tag" ] ; then
+            echo "SERVERLESS_VERSION=${GITHUB_REF_NAME#*v}" >> $GITHUB_ENV
+          else
+            echo "SERVERLESS_VERSION=$(docker run --rm node:${{env.NODE_VERSION}} npm show serverless version))
+          fi
+          echo "NODE_VERSION: ${{env.NODE_VERSION}}"
+          echo "NODE_VERSION=${{env.NODE_VERSION}}" >> $GITHUB_ENV
+          echo "SERVERLESS_VERSION: $SERVERLESS_VERSION"
+          echo "::set-output name=serverless_version::$SERVERLESS_VERSION"
       -
         name: Docker meta
         id: meta
@@ -32,8 +48,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+            type=raw,value=${{ steps.build-env.outputs.serverless_version }},enable=${{ !startsWith(github.ref, 'refs/tags/v') }}
             type=sha
       -
         name: Set up QEMU
@@ -55,3 +70,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+#           build-args: |
+#             SERVERLESS_VERSION=${{ steps.build-env.outputs.serverless_version }}
+#             NODE_VERSION=${{env.NODE_VERSION}}
