--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,7 +27,7 @@ jobs:
           if [ "$GITHUB_REF_TYPE" == "tag" ] ; then
             echo "SERVERLESS_VERSION=${GITHUB_REF_NAME#*v}" >> $GITHUB_ENV
           else
-            echo "SERVERLESS_VERSION=$(docker run --rm node:${{env.NODE_VERSION}} npm show serverless version))
+            echo "SERVERLESS_VERSION=$(docker run --rm node:${{env.NODE_VERSION}} npm show serverless version))" >> $GITHUB_ENV
           fi
           echo "NODE_VERSION: ${{env.NODE_VERSION}}"
           echo "NODE_VERSION=${{env.NODE_VERSION}}" >> $GITHUB_ENV
