--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,6 +6,9 @@ on:
       - '**'
     tags:
       - 'v*.*.*'
+      - 'v*.*.*-node*'
+  schedule:
+    - cron: '0 0 * * 4'
   pull_request:
     branches:
       - 'master'
@@ -24,15 +27,21 @@ jobs:
         name: Setup build environment variables
         id: build-env
         run: |
+          NODE_VERSION=${{env.NODE_VERSION}}
           if [ "$GITHUB_REF_TYPE" == "tag" ] ; then
-            echo "SERVERLESS_VERSION=${GITHUB_REF_NAME#*v}" >> $GITHUB_ENV
+            SERVERLESS_VERSION=${GITHUB_REF_NAME%%-*}
+            SERVERLESS_VERSION=${SERVERLESS_VERSION#*v}
+            [[ $GITHUB_REF_NAME == *"-node"* ]] && NODE_VERSION=${GITHUB_REF_NAME#*-node}
           else
-            echo "SERVERLESS_VERSION=$(docker run --rm node:${{env.NODE_VERSION}} npm show serverless version))" >> $GITHUB_ENV
+            SERVERLESS_VERSION=$(docker run --rm node:${{env.NODE_VERSION}} npm show serverless version)
+            
           fi
-          echo "NODE_VERSION: ${{env.NODE_VERSION}}"
-          echo "NODE_VERSION=${{env.NODE_VERSION}}" >> $GITHUB_ENV
+          echo "NODE_VERSION: $NODE_VERSION"
+          echo "NODE_VERSION=$NODE_VERSION" >> $GITHUB_ENV
           echo "SERVERLESS_VERSION: $SERVERLESS_VERSION"
+          echo "SERVERLESS_VERSION=$SERVERLESS_VERSION" >> $GITHUB_ENV
           echo "::set-output name=serverless_version::$SERVERLESS_VERSION"
+          echo "::set-output name=node_version::$NODE_VERSION"
       -
         name: Docker meta
         id: meta
@@ -48,7 +57,9 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
-            type=raw,value=${{ steps.build-env.outputs.serverless_version }},enable=${{ !startsWith(github.ref, 'refs/tags/v') }}
+            type=match,pattern=v(.*),group=1,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=schedule,value=latest,enable=true
+            type=schedule,value=${{ steps.build-env.outputs.serverless_version }},enable=true
             type=sha
       -
         name: Set up QEMU
@@ -72,4 +83,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 #           build-args: |
 #             SERVERLESS_VERSION=${{ steps.build-env.outputs.serverless_version }}
-#             NODE_VERSION=${{env.NODE_VERSION}}
+#             NODE_VERSION=${{ steps.build-env.outputs.node_version }}
